--- a/css/style.scss
+++ b/css/style.scss
@@ -113,7 +113,91 @@ header {
                 margin-left: 0;
             }
         }
+        // ハンバーガーメニュー　レスポンシブのみ
+        .openbtn1 {
+            display: none;
+
+            position: relative;
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+
+            span {
+                display: inline-block;
+                transition: all .5s;
+                position: absolute;
+                left: 14px;
+                height: 1px;
+                border-radius: 2px;
+                background-color: #000;
+                width: 45%;
+
+                &:nth-of-type(1) {
+                    top: 10px;
+                }
+                &:nth-of-type(2) {
+                    top: 18px;
+                }
+                &:nth-of-type(3) {
+                    top: 26px;
+                }
+            }
+        }
+
+        .openbtn1.active {
+
+            span {
+
+                &:nth-of-type(1) {
+                    top: 13px;
+                    left: 18px;
+                    transform: translateY(6px) rotate(-45deg);
+                    width: 30%;
+                }
+                &:nth-of-type(2) {
+                    opacity: 0;
+                }
+                &:nth-of-type(3) {
+                    top: 25px;
+                    left: 18px;
+                    transform: translateY(-6px) rotate(45deg);
+                    width: 30%;
+                }
+            }
+        }
+
     }
+
+    .hamburger-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-image: url(../images/background-image.png);
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        padding: 150px 10px;
+
+        text-align: center;
+        pointer-events: all;
+
+        ul {
+            li {
+                margin-bottom: 30px;
+            }
+        }
+
+        .sns-nav {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+
+            i {
+                margin: 0 15px;
+            }
+        }
+    }
+
  
     .sub-nav {
         width: 1100px;
@@ -358,6 +442,11 @@ main {
             font-size: 25px;
             margin-top: 50px;
         }
+
+        .responsive-on {
+            display: none;
+        }
+    
 
         .sub-midasi {
             display: flex;
