--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,6 @@ header i {
 header .inner {
   height: 130px;
   padding: 44px 0;
-  pointer-events: auto;
 }
 
 header .change-color {
@@ -180,6 +179,10 @@ header .hamburger-menu ul li {
   margin-bottom: 30px;
 }
 
+header .hamburger-menu ul li a:hover {
+  color: #7b2532;
+}
+
 header .hamburger-menu .sns-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -194,6 +197,10 @@ header .hamburger-menu .sns-nav {
 
 header .hamburger-menu .sns-nav i {
   margin: 0 15px;
+}
+
+header .hamburger-menu .sns-nav i:hover {
+  color: #7b2532;
 }
 
 header .sub-nav {
@@ -244,6 +251,10 @@ header .sub-nav .hover {
 }
 
 header .kakusu {
+  display: none;
+}
+
+header .none {
   display: none;
 }
 
